Add functions to load models

--- a/notebooks/how_to/learned_descriptors.ipynb
+++ b/notebooks/how_to/learned_descriptors.ipynb
@@ -52,7 +52,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<geomfum.basis.LaplaceEigenBasis at 0x21ca1894690>"
+                            "<geomfum.basis.LaplaceEigenBasis at 0x21ef5f3fb90>"
                         ]
                     },
                     "execution_count": 3,
@@ -75,24 +75,45 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "torch.Size([1, 7207, 128])"
+                            "torch.Size([1, 7207, 256])"
                         ]
                     },
-                    "execution_count": 4,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "descr = LearnedDescriptor.from_registry(which='diffusion_net')\n",
+                "descr = LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz')\n",
                 "\n",
                 "hsign = descr(mesh)\n",
+                "\n",
+                "\n",
+                "hsign.shape"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "If we have a pretrained model we can load it"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "descr.load_from_path('path-to_model')\n",
+                "hsign = descr(mesh)\n",
+                "\n",
                 "\n",
                 "hsign.shape"
             ]
@@ -106,7 +127,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
