Updated and uniformed descriptors with features extractors

--- a/notebooks/how_to/descriptors_with_feat_extractors.ipynb
+++ b/notebooks/how_to/descriptors_with_feat_extractors.ipynb
@@ -4,24 +4,20 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# How to create a descriptor pipeline?"
+                "# How to compute descriptors from Features extractors?"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
+                "import numpy as np\n",
+                "\n",
                 "from geomfum.dataset import NotebooksDataset\n",
-                "from geomfum.descriptor.pipeline import (\n",
-                "    ArangeSubsampler,\n",
-                "    DescriptorPipeline,\n",
-                "    L2InnerNormalizer,\n",
-                ")\n",
-                "from geomfum.descriptor.spectral import HeatKernelSignature, WaveKernelSignature\n",
-                "from geomfum.shape import TriangleMesh\n",
-                "from geomfum.descriptor.learned import LearnedDescriptor\n"
+                "from geomfum.descriptor.learned import LearnedDescriptor\n",
+                "from geomfum.shape import TriangleMesh\n"
             ]
         },
         {
@@ -33,7 +29,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -50,20 +46,9 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "<geomfum.basis.LaplaceEigenBasis at 0x1ea4499aa50>"
-                        ]
-                    },
-                    "execution_count": 3,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
+            "outputs": [],
             "source": [
                 "mesh.laplacian.find_spectrum(spectrum_size=10, set_as_basis=True)\n",
                 "\n",
@@ -74,24 +59,47 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "A pipeline is composed of [`Descriptor`](./descriptors.ipynb), `Subsampler` and `Normalizer`."
+                "## DiffusionNet"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
-                "steps = [\n",
-                "    LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz'),\n",
-                "    HeatKernelSignature.from_registry(n_domain=4),\n",
-                "    ArangeSubsampler(subsample_step=2),\n",
-                "    WaveKernelSignature.from_registry(n_domain=3),\n",
-                "    L2InnerNormalizer(),\n",
-                "]\n",
+                "descr = LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz')\n",
+                "mesh.to_torch()\n",
+                "hsign = descr(mesh)\n",
                 "\n",
-                "pipeline = DescriptorPipeline(steps)"
+                "hsign.shape"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "If we have a pretrained model we can load it"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "descr.load_from_path('path-to_model')\n",
+                "hsign = descr(mesh)\n",
+                "\n",
+                "\n",
+                "hsign.shape"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# PointNet"
             ]
         },
         {
@@ -102,7 +110,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "(133, 7207)"
+                            "(128, 7207)"
                         ]
                     },
                     "execution_count": 6,
@@ -111,26 +119,11 @@
                 }
             ],
             "source": [
-                "descr = pipeline.apply(mesh)\n",
+                "descr = LearnedDescriptor.from_registry(which='point_net')\n",
                 "\n",
-                "descr.shape"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Further reading\n",
-                "\n"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "* [How to compute a functional map?](./functional_map.ipynb)\n",
+                "hsign = descr(mesh)\n",
                 "\n",
-                "* [How to compute descriptors?](./descriptors.ipynb)"
+                "hsign.shape"
             ]
         }
     ],
