Update Deep_functional_map unified function

--- a/notebooks/how_to/descriptors_with_feat_extractors.ipynb
+++ b/notebooks/how_to/descriptors_with_feat_extractors.ipynb
@@ -104,22 +104,11 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "(128, 7207)"
-                        ]
-                    },
-                    "execution_count": 6,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
+            "outputs": [],
             "source": [
-                "descr = LearnedDescriptor.from_registry(which='point_net')\n",
+                "descr = LearnedDescriptor.from_registry(k=128,which='point_net')\n",
                 "\n",
                 "hsign = descr(mesh)\n",
                 "\n",
