Add forward in a better way, add to_torch for basis changed pinv function

--- a/notebooks/how_to/descriptors_with_feat_extractors.ipynb
+++ b/notebooks/how_to/descriptors_with_feat_extractors.ipynb
@@ -68,9 +68,14 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "\n",
                 "descr = LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz')\n",
+                "#we convert to torch to use learned desctiptors\n",
                 "mesh.to_torch()\n",
                 "hsign = descr(mesh)\n",
+                "\n",
+                "#we convert to numpy, remove the batch and transpose\n",
+                "hsign = hsign[0].detach().cpu().numpy().transpose(1,0)\n",
                 "\n",
                 "hsign.shape"
             ]
@@ -109,8 +114,12 @@
             "outputs": [],
             "source": [
                 "descr = LearnedDescriptor.from_registry(k=128,which='point_net')\n",
-                "\n",
+                "#we convert to torch to use learned desctiptors\n",
+                "mesh.to_torch()\n",
                 "hsign = descr(mesh)\n",
+                "\n",
+                "#we convert to numpy, remove the batch and transpose\n",
+                "hsign = hsign[0].detach().cpu().numpy().transpose(1,0)\n",
                 "\n",
                 "hsign.shape"
             ]
