--- a/notebooks/how_to/functional_map_forward.ipynb
+++ b/notebooks/how_to/functional_map_forward.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -29,7 +29,7 @@
                 "    SpectralDescriptorPreservation,\n",
                 ")\n",
                 "\n",
-                "from geomfum.deep_functional_map import ForwardFunctionalMap\n",
+                "from geomfum.geomfum.dfm.forward_functional_map import ForwardFunctionalMap\n",
                 "from geomfum.shape import TriangleMesh"
             ]
         },
@@ -136,7 +136,10 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "fmap = ffm(mesh_a, mesh_b, descr_a,descr_b)\n"
+                "fmap = ffm(mesh_a, mesh_b, descr_a,descr_b)\n",
+                "\n",
+                "#we do not consider the batch and convert to numpy\n",
+                "fmap=fmap[0].numpy()\n"
             ]
         },
         {
