--- a/notebooks/how_to/descriptor_pipeline.ipynb
+++ b/notebooks/how_to/descriptor_pipeline.ipynb
@@ -56,7 +56,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<geomfum.basis.LaplaceEigenBasis at 0x1ea4499aa50>"
+                            "<geomfum.basis.LaplaceEigenBasis at 0x17bd63e4a90>"
                         ]
                     },
                     "execution_count": 3,
@@ -79,12 +79,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [],
             "source": [
                 "steps = [\n",
-                "    LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz'),\n",
+                "    LearnedDescriptor.from_registry(out_channels=20,k_eig=200,which='diffusion_net',input_type= 'xyz'),\n",
                 "    HeatKernelSignature.from_registry(n_domain=4),\n",
                 "    ArangeSubsampler(subsample_step=2),\n",
                 "    WaveKernelSignature.from_registry(n_domain=3),\n",
@@ -96,16 +96,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "(133, 7207)"
+                            "(15, 7207)"
                         ]
                     },
-                    "execution_count": 6,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
