Add references, docstrings

--- a/notebooks/how_to/learn_descriptorsDEMO.ipynb
+++ b/notebooks/how_to/learn_descriptorsDEMO.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +33,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We load options from a configuration file or a dictionary\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load configuration file\n",
+    "opt={\n",
+    "    \"device\": \"cuda\",\n",
+    "    \"epochs\": 100,\n",
+    "    \"batch_size\": 1,\n",
+    "    \"lr\": 0.001,\n",
+    "    \"shape_dir\": \"../../../datasets/shrec_r\",\n",
+    "    \"k\": 128,\n",
+    "    \"model\": {\n",
+    "        \"class\": \"CaoNet\",\n",
+    "        \"params\": {\n",
+    "            \"descriptor\": {\n",
+    "                \"type\": \"diffusion_net\",\n",
+    "                \"params\": {\n",
+    "                    \"out_channels\" : 128,\n",
+    "                    \"cache_dir\" : \"../../../datasets/shrec_r/diffusion/\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"forward_map\": {\n",
+    "                \"lmbda\": 0.001,\n",
+    "                \"resolvent_gamma\": 1\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    \"loss_config\": {\n",
+    "        \"Orthonormality\": 1.0,\n",
+    "        \"Laplacian_Commutativity\": 0.01,\n",
+    "        \"Fmap_Supervision\": 1.0\n",
+    "    },\n",
+    "    \"save_interval\": 50\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alternatively\n",
     "yaml_file = \"config_test.yaml\"\n",
     "with open(yaml_file, 'r') as stream:\n",
     "    config = yaml.safe_load(stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can train, test and save the network"
    ]
   },
   {
