--- a/notebooks/how_to/descriptors_with_feat_extractors.ipynb
+++ b/notebooks/how_to/descriptors_with_feat_extractors.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -29,7 +29,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -46,9 +46,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "<geomfum.basis.LaplaceEigenBasis at 0x273691585d0>"
+                        ]
+                    },
+                    "execution_count": 12,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "mesh.laplacian.find_spectrum(spectrum_size=10, set_as_basis=True)\n",
                 "\n",
@@ -64,12 +75,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "(128, 7207)"
+                        ]
+                    },
+                    "execution_count": 13,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "\n",
-                "descr = LearnedDescriptor.from_registry(out_channels=256,k_eig=200,which='diffusion_net',input_type= 'xyz')\n",
+                "descr = LearnedDescriptor.from_registry(out_channels=128,which='diffusion_net',input_type= 'xyz')\n",
                 "#we convert to torch to use learned desctiptors\n",
                 "mesh.to_torch()\n",
                 "hsign = descr(mesh)\n",
@@ -89,11 +111,22 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "torch.Size([1, 7207, 128])"
+                        ]
+                    },
+                    "execution_count": 14,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "descr.load_from_path('path-to_model')\n",
+                "descr.load_from_path('test.pth')\n",
                 "hsign = descr(mesh)\n",
                 "\n",
                 "\n",
@@ -127,7 +160,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "venv",
+            "display_name": "VENV",
             "language": "python",
             "name": "python3"
         },
